gitea/gitea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea-container
        image: gitea/gitea:1.12.3
        lifecycle:
          postStart:
            exec:
              command: ['su', 'git', '-c', '/data/init_gitea.sh']
        ports:
            - name: http
              containerPort: 3000
            - name: https
              containerPort: 443
        volumeMounts:
            - mountPath: /data
              name: gitea-data
              readOnly: false
            - name: gitea-app-init
              mountPath: /data/init_gitea.sh
              subPath: init_gitea.sh
            - mountPath: /tools
              name: gitea-tools
            - mountPath: /gitea-tmp
              name: gitea-tmp
            - mountPath: /data/mirrors
              name: gitea-mirrors
        readinessProbe:
          httpGet:
            path: /
            port: 3000
      volumes:
        - name: gitea-data
          emptyDir: {}
        - name: gitea-app-conf
          configMap:
            name: gitea-config
        - name: gitea-app-init
          configMap:
            name: gitea-init
            defaultMode: 0777
        - name: gitea-mirrors
          configMap:
            name: gitea-mirrors
        - name: gitea-tools
          emptyDir: {}
        - name: gitea-tmp
          emptyDir: {}
