gitea/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  labels:
    app: gitea
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: gitea
