gitea/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: gitea.cluster1.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea-service
          servicePort: 80
  tls:
  - hosts:
    - gitea.cluster1.local
    secretName: cicd-tls-secret
